--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;700&display=swap');
+:root{
+    --black-1: #2A2A2A;
+    --black-2: #101014;
+    --yellow-1: #FAC742;
+    --white: #FFF;
+    --shadow-dark: rgba(0,0,0,0.3);
+    --shadow-light: rgba(255,255,255,0.1);
+    --linear-color: linear-gradient(0deg, rgba(236,243,249,1) 0%, rgba(139,172,205,1) 66%);
+}
+
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: 16px;
+    width: 100%;
+    height: 100vh;
+    background: var(--white);
+    background: var(--linear-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
